Changing paginate limit to 10 instead of default 20 in app/app_controller.php Small CSS tweaks to make links in table headings a different colour, prevent double borders on pagination numbers, style block titles Updates to admin layout to move sidebar content into view files Updates to bake index template including additional markup hooks and css class names for CSS, removing separators in between pagination numbers, specifying span tag for pagination numbers

--- a/app/webroot/css/base.css
+++ b/app/webroot/css/base.css
@@ -51,7 +51,7 @@ body {
 }
 
 
-.actions-bar .pagination {
+.actions-bar .paging {
   float: right;
   padding: 1px 0;
 }
@@ -157,9 +157,9 @@ body {
   padding-bottom: 20px;
 }
 
-/* pagination */
+/* paging */
 
-.pagination a, .pagination span {
+.paging a, .paging span.current, .paging span.disabled {
   padding: 2px 5px;
   margin-right: 5px; 
   display: block;
@@ -168,11 +168,11 @@ body {
   border-width: 1px;
 }
 
-.pagination span.current {
+.paging span.current {
   font-weight: bold;  
 }
 
-.pagination a {
+.paging a {
   text-decoration: none;  
 }
 
